# eclai-microservices

./: docker-compose.yml
ai_search_engine/: Dockerfile-prod  pyproject.toml
ai_search_engine/app/: ai_search_engine.py  main.py
ai_url_loader/app/: ai_url_service.py  main.py  model.py
url-ailoader/: Dockerfile-dev  pyproject.toml
url-ailoader/app/: ai_url_service.py  main.py
