[tool.poetry]
name = "search-certifications"
version = "0.1.0"
description = ""
authors = ["Muhammad Junaid <mr.junaidshaukat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
langchain-openai = "^0.0.8"
tavily-python = "^0.3.1"
python-dotenv = "^1.0.1"
langchain = "^0.1.11"
langchainhub = "^0.1.15"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
